# Automation-Core

./: CMakeLists.txt  MessageRouter.h  README.md  RouteResult.h  main.cpp
automation-core-milestone1-skeleton-fixed/automation-core-milestone1-skeleton/apps/core_cli/: main.cpp
automation-core-milestone1-skeleton/docs/: NEXT_STEPS.md
automation-core-milestone1-skeleton/include/automation_core/Connection/: Connection.h
automation-core-milestone1-skeleton/include/automation_core/Frame/: FrameAssembler.h  FrameError.h  FrameResult.h
automation-core-milestone1-skeleton/src/Frame/: FrameAssembler.cpp
automation-core-milestone1-skeleton/src/Protocol/: Parser.cpp  Validator.cpp
automation-core-milestone1-skeleton/src/Router/: MessageRouter.cpp
automation-core-milestone1-skeleton/tests/: test_main.cpp
automation-core-milestone1-skeleton/tests/connection/: ConnectionManagerTests.cpp
automation-core-milestone1-skeleton/tests/frame/: FrameAssemblerTests.cpp
automation-core-milestone1-skeleton/tests/parser/: ParserTests.cpp
automation-core-milestone1-skeleton/tests/validator/: ValidatorTests.cpp
docs/: NEXT_STEPS.md
docs/architecture/: BOUNDARIES.md
docs/decisions/: ADR-001-message-id.md
docs/protocol/: PROTOCOL_V0.1.md
include/automation_core/Frame/: Frame.h
include/automation_core/Protocol/: Message.h  MessageSerializer.h  ParseResult.h  Parser.h
include/automation_core/Registry/: ModuleRegistry.h  RegistrationResult.h
include/automation_core/Response/: ResponseBuilder.h
include/automation_core/Router/: MessageRouter.h
include/automation_core/Transport/: ITransport.h
src/Connection/: ConnectionManager.cpp
src/Protocol/: MessageSerializer.cpp  Parser.cpp
src/Response/: ResponseBuilder.cpp
src/Router/: MessageRouter.cpp
src/Transport/: ConsoleTransport.cpp  SerialTransport.cpp
tests/: test_main.cpp
tests/connection/: ConnectionManagerTests.cpp
tests/parser/: ParserTests.cpp
tests/router/: MessageRouterTests.cpp
tests/serializer/: MessageSerializerTests.cpp
tests/validator/: ValidatorTests.cpp
(+24 files in other folders)
